--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
          </div>
       </div>
     </section>
+    <section>
+      <div class="adress">
+        <h1> <span style="color: red;">Place:</span> New Park Hotel <br>
+          <span style="color:red;">Date:</span> 31 December Night 2023 <br>
+          <span style="color:red;" >Time: </span>Evening 7.30 pm to 12.30 am</h1>
+          <div><button class="adress-btn">Join Now</button></div>
+      </div>
+
+
+    </section>
+
+
+
 
   </main>
   <footer>
