--- a/index.html
+++ b/index.html
@@ -50,7 +50,26 @@
           <span style="color:red;" >Time: </span>Evening 7.30 pm to 12.30 am</h1>
           <div><button class="adress-btn">Join Now</button></div>
       </div>
+    </section>
+    <!-- ..3rd section -->
+    <section class="new-container">
+      <div> 
+        <h3> <span style="color: red;" >NEW BEST OFFER</span> </h3>
+        <h1 class="bold-text">Coming Soon</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas <br> sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
 
+      </div>
+      
+      <div class="circle-img" >
+        <img  src="B9A1-New-Year-New-Mission-main/resources/Ellipse 1.png" alt="">
+</div>
+
+      <div>
+        <h1><span style="color: red;" >2024</span></h1>
+        <p>Dolor sit amet consectetur. Consequat eget <br> consectetur maecenas sed.</p>
+        <img src="B9A1-New-Year-New-Mission-main/resources/Group 96.png" alt="">
+
+      </div>
 
     </section>
 
